--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -7,8 +7,8 @@
     flex-direction: column;
     gap: 20px;
     justify-content: space-between;
-    /* padding-top: 20px;
-    overflow: hidden; */
+    padding-top: 20px;
+    overflow: hidden;
 }
 
 .image {
@@ -21,11 +21,9 @@
 }
 
 .pic {
-    width: 250px;
-    height: 250px;
     border-radius: 50%;
 }
-/*
+
 .list {
     display: flex;
     flex-direction: row;
@@ -72,4 +70,4 @@
 
 .statistic {
     font-weight: 600;
-} */
+}
